--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ p	{text-indent:20px;
 <body bgcolor = "#ffffcc" text = "#000000">
 <h1>BELAJAR BUAT WEBSITE DI GITHUB CUK!!!</h1>
 
-<p>YIni pertama kali aku buat website pake GIT HUB</p>
+<p>Ini pertama kali aku buat website pake GIT HUB</p>
 
 <p>ya susah susah gampang</p>
 
